# CURSE

./: .gitmodules  README.md
.github/workflows/: rust.yml
doc/: bom.md
fw/: .vimspector.json  Cargo.toml  Embed.toml  README.md  dap_server.sh  todo.md
fw/.cargo/: config.toml
fw/src/: bitmaps.rs  display.rs  input.rs  lib.rs  main.rs  perf.rs  render.rs  sequencer.rs  utils.rs
fw/tools/rtt_raw/: Cargo.toml
fw/tools/rtt_raw/src/: main.rs
