[package]
name = "curse"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-hal = "1.0.0"
nb = "1"
cortex-m = "0.7"
cortex-m-rt = "0.7"
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
panic-halt = "1.0.0"
# defmt = "0.3"
# defmt-rtt = "0.3"
ra8835a = { path = "../../RA8835A" }

[dependencies.stm32f4xx-hal]
version = "0.22.1"
features = ["stm32f411"]

[profile.dev]
panic="abort"
opt-level = 2

[[bin]]
name = "curse"
path = "src/main.rs"
test = false
bench = false
